design homepage video

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,8 @@ body {
 .app-container{
   .header-container{
     .navbar-nav{
+      z-index: 10;
+      opacity: 0.7;
       .nav-link{
         &.active{
           color: red;
@@ -19,4 +21,11 @@ body {
       }
     }
   }
+}
+
+
+video{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
