--- a/src/App.scss
+++ b/src/App.scss
@@ -9,20 +9,84 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 .app-container{
   .header-container{
-    .navbar-nav{
+    
+    .Login {
+        padding: 0 15px;
+        border-radius: 5px;
+        margin-right: 15px;
+        border: 1px solid rgb(44, 44, 44);
+        height: 40px;
+        &:hover{
+          background-color: rgb(230, 229, 229);
+        }
+    }
+    .Signup {
+        padding: 0 15px;
+        border-radius: 5px;
+        border: 1px solid rgb(44, 44, 44);
+        background-color: rgb(44, 44, 44);
+        color: white;
+        height: 40px;
+        &:hover{
+          border: 1px solid black;
+          background-color: black;
+        }
+    }
+    .navbar{
+      padding: 20px;
       z-index: 10;
-      opacity: 0.7;
+      background-color: rgba(0,0,0,0);
       .nav-link{
         &.active{
           color: red;
         }
       }
     }
+
+  }
+  .homepage-container{
+    .homepage-content{
+      position: relative ;
+      padding: 100px;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      .title-1{
+        font-size: 50px;
+        font-weight: 500;
+      }
+      .title-2{
+        font-size: 20px;
+      }
+      .title-3{
+        button{
+          padding: 0 15px;
+          border-radius: 5px;
+          border: 1px solid rgb(44, 44, 44);
+          background-color: rgb(44, 44, 44);
+          color: white;
+          height: 40px;
+          &:hover{
+            border: 1px solid black;
+            background-color: black;
+          }
+        }
+      }
+    }
   }
 }
 
+@media (min-width: 1500px){
+  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+      max-width: 1450px !important;
+  }
+
+}
 
 video{
   position: fixed;
